tests/rascal/negative/type_errors/L1/16_expression_ES10_D4_70.ob
MODULE Test16;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               p := (~ (~ ((1223 - z) <= y)));
               z := (200 + y);
               q := ((+ z) < 0);
               r := (r OR (((+ y) - (y - 2)) > (+ 0)));
               y := 1223;
  (* error *)  q := ((~ p) OR ((+ 200) >= (+ 200)));
               r := (1223 >= 0);
               q := (1223 >= y);
               y := ((x + ((1 + 1223) MOD (- 1))) - (+ (x * (1223 MOD 0))));
               x := z
END Test16.